--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,15 @@ description = "a GUI for the Rust otp_exchange package"
 authors = ["NickyNocerino"]
 license = "MIT"
 readme = "README.md"
+packages = [
+    { include = "otp_gui" },
+]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-otp_exchange = {git = "https://github.com/NickyNocerino/otp_gui.git"}
+otp_exchange = {git = "git@github.com:NickyNocerino/otp-exchange.git", branch= "main"}
 
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
